--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <i class="fa-sharp fa-regular fa-arrow-left"></i>
             </div>
 
-            <div class="header__img">
-                <img src="ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+            <div class="header__logo">
+                <img class="header__logo__img" src="ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
             </div>
 
         </div>
@@ -159,7 +159,7 @@
             <section class="restaurants">
 
                 <h1 class="restaurants__h1">
-                    Fonctionnement
+                    Restaurants
                 </h1>
 
                 <!-- restaurants-card -->
