--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font-awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/4ffbec3cc8.js" crossorigin="anonymous"></script>
     <!-- font-google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +33,7 @@
         <div class="header">
 
             <div class="header__icon">
-                <i class="fa-sharp fa-regular fa-arrow-left"></i>
+                <i class="fa-solid fa-arrow-left"></i>
             </div>
 
             <div class="header__logo">
@@ -52,11 +51,11 @@
             <section class="search">
 
                 <div class="search__icon">
-                    <i class="fa-sharp fa-solid fa-location-dot"></i>
+                    <i class="fa-solid fa-location-dot"></i>
                 </div>
 
                 <div class="search__input">
-                    <input type="search" name="city" id="city" placeholder="Paris, Belleville">
+                        <input type="search" name="city" id="city" placeholder="Paris, Belleville">    
                 </div>
 
             </section>
@@ -66,11 +65,11 @@
             <section class="reservation">
 
                 <h1 class="reservation__h1">
-                    Réservez le menu qui vous convient
+                    Réservez le menu qui <br> vous convient
                 </h1>
 
                 <p class="reservation__p">
-                    Découvrez des restaurants d'exception, sélectionnés par nos soins.
+                    Découvrez des restaurants d'exception, <br> sélectionnés par nos soins.
                 </p>
 
                 <div class="reservation__btn">
@@ -141,7 +140,7 @@
                         </div>
 
                         <div class="functioning__icon">
-                            <i lass="fa-solid fa-store"></i>
+                            <i class="fa-solid fa-store"></i>
                         </div>
 
                         <h3 class="functioning__h3">
@@ -164,7 +163,7 @@
 
                 <!-- restaurants-card -->
 
-                <a href="#" class="restaurants__link">
+                <a href="la-palette-du-gout.html" class="restaurants__link">
 
                     <card class="restaurants__card">
 
@@ -186,7 +185,7 @@
                         </h3>
 
                         <div class="restaurants__icon">
-                            <i class="fa-thin fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </div>
 
                     </card>
@@ -217,7 +216,7 @@
                         </h3>
 
                         <div class="restaurants__icon">
-                            <i class="fa-thin fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </div>
 
                     </card>
@@ -248,7 +247,7 @@
                         </h3>
 
                         <div class="restaurants__icon">
-                            <i class="fa-thin fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </div>
 
                     </card>
@@ -279,7 +278,7 @@
                         </h3>
 
                         <div class="restaurants__icon">
-                            <i class="fa-thin fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </div>
 
                     </card>
@@ -307,7 +306,7 @@
             <a href="#" class="footer__link">
 
                 <div class="footer__icon">
-                    <i class="fa-regular fa-utensils"></i>
+                    <i class="fa-solid fa-utensils"></i>
                 </div>
 
                 <p class="footer__p">
@@ -319,7 +318,7 @@
             <a href="#" class="footer__link">
 
                 <div class="footer__icon">
-                    <i class="fa-light fa-handshake-angle"></i>
+                    <i class="fa-solid fa-handshake-angle"></i>
                 </div>
 
                 <p class="footer__p">
