--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
                     Découvrez des restaurants d'exception, <br> sélectionnés par nos soins.
                 </p>
 
-                <div class="reservation__btn">
-                    <input type="button" value="Explorer nos restaurants">
+                <div >
+                    <a href="#" class="reservation__btn">
+                        <button type="button" >
+                            Explorer nos restaurants
+                        </button>
+                    </a>    
                 </div>
 
             </section>
