--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -266,7 +266,14 @@
 
             </section>
 
-            
+            <div class="resto1__btn">
+                <a href="#">
+                    <button type="button">
+                    Commander
+                    </button>
+                </a>    
+            </div>
+           
 
         </div>    
 
