probleme css suite

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="search__input">
-                        <input type="search" name="city" id="city" placeholder="Paris, Belleville">    
+                        <button type="submit">Paris, Belleville</button>
                 </div>
 
             </section>
@@ -73,7 +73,7 @@
                 </p>
 
                 <div >
-                    <a href="#" class="reservation__btn">
+                    <a href="#" class="reservation-btn">
                         <button type="button" >
                             Explorer nos restaurants
                         </button>
