--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -266,7 +266,7 @@
 
             </section>
 
-            <div class="resto1__btn">
+            <div class="resto-btn">
                 <a href="#">
                     <button type="button">
                     Commander
