css probleme encore

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 </p>
 
                 <div >
-                    <a href="#" class="reservation-btn">
-                        <button type="button" >
+                    <a href="#">
+                        <button class="reservation-btn" type="button" >
                             Explorer nos restaurants
                         </button>
                     </a>    
@@ -302,7 +302,7 @@
             <a href="index.html" class="footer__link">
 
                 <div class="footer__logo">
-                    <img src="ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+                    <img class="header__logo__img" src="ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
                 </div>
 
             </a>
