--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
             <a href="index.html" class="footer__link">
 
                 <div class="footer__logo">
-                    <img class="header__logo__img" src="ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+                    <img class="footer__logo__img" src="ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
                 </div>
 
             </a>
-
+            .
             <a href="#" class="footer__link">
 
                 <div class="footer__icon">
